--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web-development-complete-guide",
+  "name": "web-development",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -7,8 +7,8 @@
     "start": "nodemon app.js"
   },
   "keywords": [],
-  "author": "Maximilian Schwarzmüller (Academind GmbH)",
-  "license": "MIT",
+  "author": "Dhruv",
+  "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.17.1",
